tests/baselines/reference/additionOperatorWithOnlyNullValueOrUndefinedValue.errors.txt
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(2,10): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(2,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(3,10): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(3,17): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(4,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(4,22): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(5,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts(5,22): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts (8 errors) ====
    // bug 819721
    var r1 = null + null;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var r2 = null + undefined;
             ~~~~
!!! error TS2531: Object is possibly 'null'.
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r3 = undefined + null;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                         ~~~~
!!! error TS2531: Object is possibly 'null'.
    var r4 = undefined + undefined;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                         ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.